tests/paczka1/fuzzy1/41267320.err
Error in line 11: srBKCj06Z A190 44,3
Error in line 20: P2hZ A190 68,9
Error in line 24: sxQ8 A220 3,6
Error in line 32: T9aJj9 A190 15,1
Error in line 34: ic6lm0zh3Dn A190 21,3
Error in line 33: T9aJj9 A476 37,4
